2006-05-02  Matthieu Herrb  <matthieu.herrb@laas.fr>

	* render/mitri.c:
	Typo in ALLLOCATE_LOCAL() arguments, causing mis-computation 
	of the buffer.Bugzilla #6642.

2006-05-01  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* exa/Makefile.am: 
	Fix Solaris build with Sun compilers to work when exa is built before
	hw/xfree86/os-support/solaris (as it is by default now).

2006-05-01  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/WaitFor.c:
	Use min() [defined in include/misc.h] instead of MIN() [not defined in
	any Xorg header].

2006-04-30  Adam Jackson  <ajax@freedesktop.org>

	* Xprint/pcl/PclGC.c:
	* Xprint/ps/PsGC.c:
	* afb/afbgc.c:
	* cfb/cfbgc.c:
	* exa/exa_accel.c:
	* fb/fbgc.c:
	* fb/fbpseudocolor.c:
	* hw/kdrive/igs/igsdraw.c:
	* hw/kdrive/savage/s3draw.c:
	* hw/kdrive/savage/s3gc.c:
	* hw/kdrive/sis530/sisdraw.c:
	* hw/kdrive/src/kaa.c:
	* hw/kdrive/src/kasync.c:
	* hw/kdrive/src/knoop.c:
	* hw/xfree86/rac/xf86RAC.c:
	* hw/xfree86/shadowfb/shadow.c:
	* hw/xfree86/xaa/xaaFallback.c:
	* hw/xfree86/xaa/xaaGC.c:
	* hw/xfree86/xf4bpp/ppcGC.c:
	* hw/xfree86/xf4bpp/vgaGC.c:
	* hw/xfree86/xf8_32bpp/cfbgc.c:
	* hw/xfree86/xf8_32bpp/cfbgcunder.c:
	* hw/xfree86/xf8_32bpp/xf86overlay.c:
	* hw/xgl/xglgc.c:
	* hw/xwin/wingc.c:
	* include/gcstruct.h:
	* mfb/mfbgc.c:
	* mi/mi.h:
	* mi/mibank.c:
	* mi/mibstore.c:
	* mi/miwideline.c:
	* miext/damage/damage.c:
	* miext/rootless/rootlessGC.c:
	* miext/rootless/accel/rlAccel.c:
	Remove NEED_LINEHELPER BC cruft for pre-R6 DDXes.

	* Xprint/ps/Makefile.am:
	* Xprint/raster/Makefile.am:
	Remove stray mfb/cfb references.

2006-04-27  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPolyPoint), (exaPolylines),
	(exaPolySegment):
	Add Polylines and PolyPoint acceleration as well.  This is primarily to
	clean up fallback debugging output, so I can focus on more imporant
	cases.  Performance is comparable but without hardware stalls, and
	passes Xlib9.

2006-04-27  Eric Anholt  <anholt@FreeBSD.org>